--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,4 @@
+# .github/workflows/ci.yml
 name: CI
 
 on:
@@ -13,6 +14,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Debug: list workspace files
+        run: |
+          echo "=== Lista de arquivos no workspace ==="
+          ls -R .
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -22,7 +28,7 @@ jobs:
       - name: Run scripts in container
         run: |
           docker run --rm \
-            -v "\${{ github.workspace }}/logs:/opt/scripts/logs" \
+            -v "${{ github.workspace }}/logs:/opt/scripts/logs" \
             devops-toolkit:ci \
             bash -c "bash disk_alert.sh && bash disk_usage_report.sh"
 
